--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 	},
 	"dependencies": {
 		"@tailwindcss/cli": "^4.1.14",
+		"@tailwindplus/elements": "^1.0.17",
 		"tailwindcss": "^4.1.14"
 	}
 }
