cloudflare pages support & some more stuff

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"vite": "^7.1.7"
 	},
 	"dependencies": {
+		"@sveltejs/adapter-cloudflare": "^7.2.4",
 		"@tailwindcss/cli": "^4.1.14",
 		"@tailwindplus/elements": "^1.0.17",
 		"tailwindcss": "^4.1.14"
