--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
 		"vite": "^7.1.7"
 	},
 	"dependencies": {
+		"@skeletonlabs/skeleton": "^4.0.1",
+		"@skeletonlabs/skeleton-svelte": "^4.0.1",
 		"@sveltejs/adapter-cloudflare": "^7.2.4",
 		"@tailwindcss/cli": "^4.1.14",
 		"@tailwindplus/elements": "^1.0.17",
